Don't change alternate scrolling state after calling reset()

Summary:
Alternate Scrolling shouldn't be reset when calling resetModes(), this
is to maintain the profile alternate scrolling property after reset()
is called, otherwise calling reset() (or clear scrollback and reset)
will always make alternate scrolling get disabled regardless of the
respective profile property.

Also this matches XTerm behavior.

BUG: 402461

Test Plan:
1 - Open a new tab and make sure the alternate scrolling profile property
    is enabled
2 - Run less or any other application that uses the alternate screen,
    scrolling with the mouse should work
3 - Quit the previous application and execute `reset`
4 - Repeat 2, notice that now scrolling doesn't work

After applying the patch, alternate scrolling mode is not changed after
calling reset.

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: konsole-devel, hindenburg

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D17781

(cherry picked from commit c9276130ac06f052f9251d8d67eaf45ff2f87708)